# db-radiolocalizacion

./: Dockerfile  README.md  compose.yaml  requirements.txt
backend/: Dockerfile  README.rst  pyproject.toml  requirements.txt
backend/controlers/: stationControler.py
backend/migrations/: env.py
backend/migrations/versions/: 52ec0b684069_add_column_to_users.py  9087f1c101fa_add_nir_table.py
backend/models/: stationModel.py
backend/script/: bulk.py  run.sh
backend/src/: __init__.py  activities.py  app.py  blog.py  db.py  filex.py  location.py  non_ionizing_radiation.py  station.py  tech_measurement.py  technician.py  users.py
backend/src/controlers/: stationControler.py
backend/src/scripts/: hashpass.py
backend/src/sql/: drop_views.sql  vista_estado.sql
backend/src/templates/blog/: create.html
backend/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
backend_old/src/models/: stationModel.py
data/: Feature-expediente.txt  Files management Database.drawio  Flux diagram.drawio  provincias.json
frontend/: .env.production  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/data/: Flux diagram.drawio  Table file-track.txt  localidades.json  municipios.json
frontend/nginx/: default.conf
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: BarChart.vue  ButtonComp.vue  DisplayRow.vue  FooterMain.vue  Form.vue  FormChangePass.vue  FormMain.vue  FormMoveFile.vue  (+22 more)
nginx/: default.conf
old dockerfile/: Dockerfile
(+63 files in other folders)
